Oppdatert dataset model