@@ -5,6 +5,8 @@ import no.nav.data.catalog.backend.app.common.exceptions.ValidationException;
 import no.nav.data.catalog.backend.app.dataset.repo.DatasetRepository;
 import no.nav.data.catalog.backend.app.distributionchannel.DistributionChannel;
 import no.nav.data.catalog.backend.app.distributionchannel.DistributionChannelRepository;
+import no.nav.data.catalog.backend.app.distributionchannel.DistributionChannelShort;
+import no.nav.data.catalog.backend.app.distributionchannel.DistributionChannelType;
 import org.junit.Before;
 import org.junit.Test;
 import org.junit.runner.RunWith;
@@ -18,8 +20,8 @@ import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
 
-import static no.nav.data.catalog.backend.app.dataset.DatasetMaster.GITHUB;
-import static no.nav.data.catalog.backend.app.dataset.DatasetMaster.REST;
+import static no.nav.data.catalog.backend.app.dataset.DatacatalogMaster.GITHUB;
+import static no.nav.data.catalog.backend.app.dataset.DatacatalogMaster.REST;
 import static org.hamcrest.CoreMatchers.is;
 import static org.junit.Assert.assertThat;
 import static org.junit.Assert.fail;
@@ -43,7 +45,8 @@ public class DatasetServiceTest {
     @Before
     public void setUp() {
         when(datasetRepository.findAllByTitle(Collections.singletonList("Haspart"))).thenReturn(Collections.singletonList(new Dataset()));
-        when(distributionChannelRepository.findAllByName(Collections.singletonList("DistributionChannel"))).thenReturn(Collections.singletonList(new DistributionChannel()));
+        when(distributionChannelRepository.findAllByName(Collections.singletonList("DistributionChannel")))
+                .thenReturn(Collections.singletonList(DistributionChannel.builder().name("name").type(DistributionChannelType.KAFKA).build()));
         CodelistStub.initializeCodelist();
     }
 
@@ -121,6 +124,34 @@ public class DatasetServiceTest {
     }
 
     @Test
+    public void validateRequest_shouldThrowValidationException_whenFieldContentTypeMissing() {
+        DatasetRequest request = createValidDatasetRequest("Title");
+        request.setContentType(null);
+        List<DatasetRequest> requests = new ArrayList<>(List.of(request));
+
+        try {
+            service.validateRequest(requests);
+        } catch (ValidationException e) {
+            assertThat(e.get().size(), is(1));
+            assertThat(e.toErrorString(), is("Request:1 -- fieldIsNullOrMissing -- contentType was null or missing"));
+        }
+    }
+
+    @Test
+    public void validateRequest_shouldThrowValidationException_whenFieldContentTypeInvalid() {
+        DatasetRequest request = createValidDatasetRequest("Title");
+        request.setContentType("invalid-type");
+        List<DatasetRequest> requests = new ArrayList<>(List.of(request));
+
+        try {
+            service.validateRequest(requests);
+        } catch (ValidationException e) {
+            assertThat(e.get().size(), is(1));
+            assertThat(e.toErrorString(), is("Request:1 -- fieldIsNullOrMissing -- contentType was invalid for type ContentType"));
+        }
+    }
+
+    @Test
     public void validateRequest_shouldThrowValidationException_whenFieldTitleIsEmpty() {
         DatasetRequest request = createValidDatasetRequest("");
 
@@ -189,6 +220,7 @@ public class DatasetServiceTest {
 
     private DatasetRequest createValidDatasetRequest(String title) {
         return DatasetRequest.builder()
+                .contentType(ContentType.DATASET.name())
                 .title(title)
                 .description("Description")
                 .categories(List.of("Category"))
@@ -196,13 +228,13 @@ public class DatasetServiceTest {
                 .pi("false")
                 .issued(LocalDateTime.now().toString())
                 .keywords(List.of("Keywords"))
-                .theme("Theme")
+                .themes(Collections.singletonList("Theme"))
                 .accessRights("AccessRights")
                 .publisher("Publisher")
                 .spatial("Spatial")
                 .haspart(List.of("Haspart"))
-                .distributionChannels(List.of("DistributionChannel"))
-                .master(REST)
+                .distributionChannels(Collections.singletonList(new DistributionChannelShort("DistributionChannel", DistributionChannelType.KAFKA.name())))
+                .datacatalogMaster(REST)
                 .requestIndex(1)
                 .build();
     }
